some auto linting fixes w/ burnettk
