# src/spiff_workflow_webapp/models/file.py
@@ -1,57 +1,64 @@
 """File."""
 import enum
-from marshmallow import Schema, INCLUDE
+
+from flask_bpmn.models.db import db
+from marshmallow import INCLUDE
+from marshmallow import Schema
 from sqlalchemy import func
 from sqlalchemy.orm import deferred  # type: ignore
 from sqlalchemy.orm import relationship
-
-from flask_bpmn.models.db import db
 
 from spiff_workflow_webapp.models.data_store import DataStoreModel
 
 
 class FileModel(db.Model):
     """FileModel."""
-    __tablename__ = 'file'
+
+    __tablename__ = "file"
     id = db.Column(db.Integer, primary_key=True)
     name = db.Column(db.String(50), nullable=False)
     type = db.Column(db.String(50), nullable=False)
     content_type = db.Column(db.String(50), nullable=False)
-    process_instance_id = db.Column(db.Integer, db.ForeignKey('process_instance.id'), nullable=True)
+    process_instance_id = db.Column(
+        db.Integer, db.ForeignKey("process_instance.id"), nullable=True
+    )
     task_spec = db.Column(db.String(50), nullable=True)
-    irb_doc_code = db.Column(db.String(50), nullable=False)  # Code reference to the documents.xlsx reference file.
+    irb_doc_code = db.Column(
+        db.String(50), nullable=False
+    )  # Code reference to the documents.xlsx reference file.
     data_stores = relationship(DataStoreModel, cascade="all,delete", backref="file")
     md5_hash = db.Column(db.String(50), unique=False, nullable=False)
     data = deferred(db.Column(db.LargeBinary))  # Don't load it unless you have to.
     size = db.Column(db.Integer, default=0)
     date_modified = db.Column(db.DateTime(timezone=True), onupdate=func.now())
     date_created = db.Column(db.DateTime(timezone=True), server_default=func.now())
-    user_uid = db.Column(db.String(50), db.ForeignKey('user.uid'), nullable=True)
+    user_uid = db.Column(db.String(50), db.ForeignKey("user.uid"), nullable=True)
     archived = db.Column(db.Boolean, default=False)
 
 
 class FileType(enum.Enum):
     """FileType."""
+
     bpmn = "bpmn"
-    csv = 'csv'
+    csv = "csv"
     dmn = "dmn"
     doc = "doc"
     docx = "docx"
-    gif = 'gif'
-    jpg = 'jpg'
-    md = 'md'
-    pdf = 'pdf'
-    png = 'png'
-    ppt = 'ppt'
-    pptx = 'pptx'
-    rtf = 'rtf'
+    gif = "gif"
+    jpg = "jpg"
+    md = "md"
+    pdf = "pdf"
+    png = "png"
+    ppt = "ppt"
+    pptx = "pptx"
+    rtf = "rtf"
     svg = "svg"
     svg_xml = "svg+xml"
-    txt = 'txt'
-    xls = 'xls'
-    xlsx = 'xlsx'
-    xml = 'xml'
-    zip = 'zip'
+    txt = "txt"
+    xls = "xls"
+    xlsx = "xlsx"
+    xml = "xml"
+    zip = "zip"
 
 
 CONTENT_TYPES = {
@@ -74,11 +81,11 @@ CONTENT_TYPES = {
     "xls": "application/vnd.ms-excel",
     "xlsx": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
     "xml": "application/xml",
-    "zip": "application/zip"
+    "zip": "application/zip",
 }
 
 
-class File(object):
+class File:
     """File."""
 
     def __init__(self):
@@ -97,8 +104,9 @@ class File(object):
         self.archived = None
 
     @classmethod
-    def from_file_system(cls, file_name, file_type, content_type,
-                         last_modified, file_size):
+    def from_file_system(
+        cls, file_name, file_type, content_type, last_modified, file_size
+    ):
         """From_file_system."""
         instance = cls()
         instance.name = file_name
@@ -114,13 +122,28 @@ class File(object):
 
 class FileSchema(Schema):
     """FileSchema."""
+
     class Meta:
         """Meta."""
+
         model = File
-        fields = ["id", "name", "content_type", "process_instance_id",
-                  "irb_doc_code", "last_modified", "type", "archived",
-                  "size", "data_store", "document", "user_uid", "url"]
+        fields = [
+            "id",
+            "name",
+            "content_type",
+            "process_instance_id",
+            "irb_doc_code",
+            "last_modified",
+            "type",
+            "archived",
+            "size",
+            "data_store",
+            "document",
+            "user_uid",
+            "url",
+        ]
         unknown = INCLUDE
+
     # url = Method("get_url")
     #
     # def get_url(self, obj):
