# src/spiff_workflow_webapp/models/task_event.py
@@ -1,18 +1,19 @@
 """Task_event."""
-
 from __future__ import annotations
 
 import enum
 
-from marshmallow import INCLUDE, fields, Schema
-from marshmallow_sqlalchemy import SQLAlchemyAutoSchema
-
 from flask_bpmn.models.db import db
+from marshmallow import fields
+from marshmallow import INCLUDE
+from marshmallow import Schema
+from marshmallow_sqlalchemy import SQLAlchemyAutoSchema
 from sqlalchemy import func
 
 
 class TaskAction(enum.Enum):
     """TaskAction."""
+
     COMPLETE = "COMPLETE"
     TOKEN_RESET = "TOKEN_RESET"
     HARD_RESET = "HARD_RESET"
@@ -22,10 +23,15 @@ class TaskAction(enum.Enum):
 
 class TaskEventModel(db.Model):
     """TaskEventModel."""
-    __tablename__ = 'task_event'
+
+    __tablename__ = "task_event"
     id = db.Column(db.Integer, primary_key=True)
-    user_uid = db.Column(db.String(50), nullable=False)  # In some cases the unique user id may not exist in the db yet.
-    process_instance_id = db.Column(db.Integer, db.ForeignKey('process_instance.id'), nullable=False)
+    user_uid = db.Column(
+        db.String(50), nullable=False
+    )  # In some cases the unique user id may not exist in the db yet.
+    process_instance_id = db.Column(
+        db.Integer, db.ForeignKey("process_instance.id"), nullable=False
+    )
     spec_version = db.Column(db.String(50))
     action = db.Column(db.String(50))
     task_id = db.Column(db.String(50))
@@ -34,7 +40,9 @@ class TaskEventModel(db.Model):
     task_type = db.Column(db.String(50))
     task_state = db.Column(db.String(50))
     task_lane = db.Column(db.String(50))
-    form_data = db.Column(db.JSON)  # And form data submitted when the task was completed.
+    form_data = db.Column(
+        db.JSON
+    )  # And form data submitted when the task was completed.
     mi_type = db.Column(db.String(50))
     mi_count = db.Column(db.Integer)
     mi_index = db.Column(db.Integer)
@@ -44,18 +52,20 @@ class TaskEventModel(db.Model):
 
 class TaskEventModelSchema(SQLAlchemyAutoSchema):
     """TaskEventModelSchema."""
+
     class Meta:
         """Meta."""
+
         model = TaskEventModel
         load_instance = True
         include_relationships = True
         include_fk = True  # Includes foreign keys
 
 
-class TaskEvent(object):
+class TaskEvent:
     """TaskEvent."""
 
-    def __init__(self, model: TaskEventModel, process_instance: "ProcessInstanceModel"):
+    def __init__(self, model: TaskEventModel, process_instance: ProcessInstanceModel):
         """__init__."""
         self.id = model.id
         self.process_instance = process_instance
@@ -78,7 +88,18 @@ class TaskEventSchema(Schema):
 
     class Meta:
         """Meta."""
+
         model = TaskEvent
-        additional = ["id", "user_uid", "action", "task_id", "task_title",
-                      "task_name", "task_type", "task_state", "task_lane", "date"]
+        additional = [
+            "id",
+            "user_uid",
+            "action",
+            "task_id",
+            "task_title",
+            "task_name",
+            "task_type",
+            "task_state",
+            "task_lane",
+            "date",
+        ]
         unknown = INCLUDE
