# src/spiff_workflow_webapp/routes/process_api_blueprint.py
@@ -1,21 +1,25 @@
 """APIs for dealing with process groups, process models, and process instances."""
-
 import connexion
-from flask import Blueprint, g
+from flask import Blueprint
+from flask import g
+from flask_bpmn.api.api_error import ApiError
+
+from spiff_workflow_webapp.models.file import FileSchema
+from spiff_workflow_webapp.models.file import FileType
+from spiff_workflow_webapp.models.process_instance import ProcessInstanceApiSchema
+from spiff_workflow_webapp.models.process_model import ProcessModelInfoSchema
+from spiff_workflow_webapp.services.process_instance_processor import (
+    ProcessInstanceProcessor,
+)
+from spiff_workflow_webapp.services.process_instance_service import (
+    ProcessInstanceService,
+)
+from spiff_workflow_webapp.services.process_model_service import ProcessModelService
+from spiff_workflow_webapp.services.spec_file_service import SpecFileService
 
 # from SpiffWorkflow.bpmn.serializer.workflow import BpmnWorkflowSerializer  # type: ignore
 # from SpiffWorkflow.camunda.serializer.task_spec_converters import UserTaskConverter  # type: ignore
 # from SpiffWorkflow.dmn.serializer.task_spec_converters import BusinessRuleTaskConverter  # type: ignore
-
-from flask_bpmn.api.api_error import ApiError
-
-from spiff_workflow_webapp.models.process_model import ProcessModelInfoSchema
-from spiff_workflow_webapp.models.process_instance import ProcessInstanceApiSchema
-from spiff_workflow_webapp.services.process_model_service import ProcessModelService
-from spiff_workflow_webapp.services.process_instance_service import ProcessInstanceService
-from spiff_workflow_webapp.services.process_instance_processor import ProcessInstanceProcessor
-from spiff_workflow_webapp.services.spec_file_service import SpecFileService
-from spiff_workflow_webapp.models.file import FileSchema, FileType
 
 process_api_blueprint = Blueprint("process_api", __name__)
 
@@ -39,9 +43,12 @@ def get_file(spec_id, file_name):
     workflow_spec = workflow_spec_service.get_spec(spec_id)
     files = SpecFileService.get_files(workflow_spec, file_name)
     if len(files) == 0:
-        raise ApiError(code='unknown file',
-                       message=f'No information exists for file {file_name}'
-                               f' it does not exist in workflow {spec_id}.', status_code=404)
+        raise ApiError(
+            code="unknown file",
+            message=f"No information exists for file {file_name}"
+            f" it does not exist in workflow {spec_id}.",
+            status_code=404,
+        )
     return FileSchema().dump(files[0])
 
 
@@ -49,8 +56,10 @@ def add_file(spec_id):
     """Add_file."""
     workflow_spec_service = ProcessModelService()
     workflow_spec = workflow_spec_service.get_spec(spec_id)
-    request_file = connexion.request.files['file']
-    file = SpecFileService.add_file(workflow_spec, request_file.filename, request_file.stream.read())
+    request_file = connexion.request.files["file"]
+    file = SpecFileService.add_file(
+        workflow_spec, request_file.filename, request_file.stream.read()
+    )
     if not workflow_spec.primary_process_id and file.type == FileType.bpmn.value:
         SpecFileService.set_primary_bpmn(workflow_spec, file.name)
         workflow_spec_service.update_spec(workflow_spec)
@@ -66,5 +75,7 @@ def create_process_instance(spec_id):
     processor.save()
     # ProcessInstanceService.update_task_assignments(processor)
 
-    workflow_api_model = ProcessInstanceService.processor_to_process_instance_api(processor)
+    workflow_api_model = ProcessInstanceService.processor_to_process_instance_api(
+        processor
+    )
     return ProcessInstanceApiSchema().dump(workflow_api_model)
